Add ZOOOOOM SDK

--- a/config/settings.local.example.yml
+++ b/config/settings.local.example.yml
@@ -1,3 +1,6 @@
 zoom:
-  client_id: "QwnJZsoWTn23RFX5yEp_5w"
-  client_secret: "Q2E4Q9putCBUZP2Fy2ZyX6fsYWiW8yZU"
+  client_id: "X"
+  client_secret: "X"
+  sdk_key: "X"
+  sdk_secret: "X"
+  redirect: "X"
