--- a/fe/.env.example
+++ b/fe/.env.example
@@ -1,3 +1,4 @@
-CLIENT_ID=QwnJZsoWTn23RFX5yEp_5w
-CLIENT_SECRET=Q2E4Q9putCBUZP2Fy2ZyX6fsYWiW8yZU
-REDIRECT_URI=https://demo-zoom.000webhostapp.com/
+REACT_APP_CLIENT_ID=X
+REACT_APP_CLIENT_SECRET=X
+REACT_APP_REDIRECT_URI=X
+REACT_APP_SDK_KEY=X
