--- a/fe/package.json
+++ b/fe/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zoomus/websdk": "^2.4.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-dotenv": "^0.1.3",
@@ -15,10 +17,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
-    "test": "react-dotenv && react-scripts test",
-    "eject": "react-dotenv && react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
